--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
   database: clientbase_development
   pool: 5
   username: root
-  password:
+  password: mysqladmin
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -26,7 +26,7 @@ test:
   database: clientbase_test
   pool: 5
   username: root
-  password:
+  password: mysqladmin
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -35,5 +35,5 @@ production:
   database: clientbase_production
   pool: 5
   username: root
-  password:
+  password: mysqladmin
   socket: /var/run/mysqld/mysqld.sock
